src/main/java/czlab/tecs/ast/ASTGentor.java
/* ASTGentor.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. ASTGentor.java */
package czlab.tecs.ast;

public class ASTGentor/*@bgen(jjtree)*/implements ASTGentorTreeConstants, ASTGentorConstants {/*@bgen(jjtree)*/
  protected JJTASTGentorState jjtree = new JJTASTGentorState();
  public SimpleNode parseOneUnit() throws Exception {
    return this.parseClazz();
  }

/************************************************
 * THE Jack GRAMMAR SPECIFICATION STARTS HERE *
 ************************************************/
//kenl
  final public ClassDec parseClazz() throws ParseException {/*@bgen(jjtree) ClassDec */
  ClassDec jjtn000 = new ClassDec(JJTCLASSDEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CLASS);
Keyword jjtn001 = new Keyword(JJTKEYWORD);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
      try {
jjtree.closeNodeScope(jjtn001, true);
            jjtc001 = false;
jjtn001.value=token.image;
      } finally {
if (jjtc001) {
              jjtree.closeNodeScope(jjtn001, true);
            }
      }
      className();
      jj_consume_token(LCURLY);
Symbol jjtn002 = new Symbol(JJTSYMBOL);
             boolean jjtc002 = true;
             jjtree.openNodeScope(jjtn002);
      try {
jjtree.closeNodeScope(jjtn002, true);
             jjtc002 = false;
jjtn002.value=token.image;
      } finally {
if (jjtc002) {
               jjtree.closeNodeScope(jjtn002, true);
             }
      }
String dummy="hack to bypass jjtree error";
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
        classVarDec();
      }
      label_2:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_2;
        }
        subroutineDec();
      }
      jj_consume_token(RCURLY);
Symbol jjtn003 = new Symbol(JJTSYMBOL);
             boolean jjtc003 = true;
             jjtree.openNodeScope(jjtn003);
      try {
jjtree.closeNodeScope(jjtn003, true);
             jjtc003 = false;
jjtn003.value=token.image;
      } finally {
if (jjtc003) {
               jjtree.closeNodeScope(jjtn003, true);
             }
      }
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

//////////////////////////////////////////////////////////////////////////////
//
  final public void classVarDec() throws ParseException {/*@bgen(jjtree) ClassVarDec */
  ClassVarDec jjtn000 = new ClassVarDec(JJTCLASSVARDEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_5(2)) {
        if (jj_2_3(2)) {
          jj_consume_token(STATIK);
        } else if (jj_2_4(2)) {
          jj_consume_token(FIELD);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
      type();
      varName();
      label_3:
      while (true) {
        if (jj_2_6(2)) {
          ;
        } else {
          break label_3;
        }
Symbol jjtn001 = new Symbol(JJTSYMBOL);
     boolean jjtc001 = true;
     jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(COMMA);
        } finally {
if (jjtc001) {
       jjtree.closeNodeScope(jjtn001, true);
     }
        }
        varName();
      }
Symbol jjtn002 = new Symbol(JJTSYMBOL);
                                 boolean jjtc002 = true;
                                 jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(SEMICOLON);
      } finally {
if (jjtc002) {
                                   jjtree.closeNodeScope(jjtn002, true);
                                 }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public void type() throws ParseException {
    if (jj_2_7(2)) {
      jj_consume_token(INT);
Keyword jjtn001 = new Keyword(JJTKEYWORD);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
      try {
jjtree.closeNodeScope(jjtn001, true);
           jjtc001 = false;
jjtn001.value=token.image;
      } finally {
if (jjtc001) {
             jjtree.closeNodeScope(jjtn001, true);
           }
      }
    } else if (jj_2_8(2)) {
      jj_consume_token(CHAR);
Keyword jjtn002 = new Keyword(JJTKEYWORD);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
      try {
jjtree.closeNodeScope(jjtn002, true);
            jjtc002 = false;
jjtn002.value=token.image;
      } finally {
if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
      }
    } else if (jj_2_9(2)) {
      jj_consume_token(BOOLEAN);
Keyword jjtn003 = new Keyword(JJTKEYWORD);
               boolean jjtc003 = true;
               jjtree.openNodeScope(jjtn003);
      try {
jjtree.closeNodeScope(jjtn003, true);
               jjtc003 = false;
jjtn003.value=token.image;
      } finally {
if (jjtc003) {
                 jjtree.closeNodeScope(jjtn003, true);
               }
      }
    } else if (jj_2_10(2)) {
      className();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public void subroutineDec() throws ParseException {/*@bgen(jjtree) SubroutineDec */
  SubroutineDec jjtn000 = new SubroutineDec(JJTSUBROUTINEDEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_14(2)) {
        if (jj_2_11(2)) {
          jj_consume_token(CONSTRUCTOR);
        } else if (jj_2_12(2)) {
          jj_consume_token(FUNCTION);
        } else if (jj_2_13(2)) {
          jj_consume_token(METHOD);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
      if (jj_2_17(2)) {
        if (jj_2_15(2)) {
          jj_consume_token(VOID);
        } else if (jj_2_16(2)) {
          type();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
      subroutineName();
Symbol jjtn001 = new Symbol(JJTSYMBOL);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(LPAREN);
      } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
      parameterList();
Symbol jjtn002 = new Symbol(JJTSYMBOL);
    boolean jjtc002 = true;
    jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(RPAREN);
      } finally {
if (jjtc002) {
      jjtree.closeNodeScope(jjtn002, true);
    }
      }
      subroutineBody();
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public void parameterList() throws ParseException {/*@bgen(jjtree) ParameterList */
  ParameterList jjtn000 = new ParameterList(JJTPARAMETERLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_19(2)) {
        type();
        varName();
        label_4:
        while (true) {
          if (jj_2_18(2)) {
            ;
          } else {
            break label_4;
          }
Symbol jjtn001 = new Symbol(JJTSYMBOL);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
          try {
            jj_consume_token(COMMA);
          } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
          }
          type();
          varName();
        }
      } else {
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public void subroutineBody() throws ParseException {/*@bgen(jjtree) SubroutineBody */
  SubroutineBody jjtn000 = new SubroutineBody(JJTSUBROUTINEBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
Symbol jjtn001 = new Symbol(JJTSYMBOL);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(LCURLY);
      } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
String dummy="hack to bypass jjtree error";
      label_5:
      while (true) {
        if (jj_2_20(2)) {
          ;
        } else {
          break label_5;
        }
        varDec();
      }
      statements();
Symbol jjtn002 = new Symbol(JJTSYMBOL);
                             boolean jjtc002 = true;
                             jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(RCURLY);
      } finally {
if (jjtc002) {
                               jjtree.closeNodeScope(jjtn002, true);
                             }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public void varDec() throws ParseException {/*@bgen(jjtree) VarDec */
  VarDec jjtn000 = new VarDec(JJTVARDEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
Keyword jjtn001 = new Keyword(JJTKEYWORD);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(VAR);
      } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
      type();
      varName();
      label_6:
      while (true) {
        if (jj_2_21(2)) {
          ;
        } else {
          break label_6;
        }
Symbol jjtn002 = new Symbol(JJTSYMBOL);
     boolean jjtc002 = true;
     jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(COMMA);
        } finally {
if (jjtc002) {
       jjtree.closeNodeScope(jjtn002, true);
     }
        }
        varName();
      }
Symbol jjtn003 = new Symbol(JJTSYMBOL);
                                 boolean jjtc003 = true;
                                 jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(SEMICOLON);
      } finally {
if (jjtc003) {
                                   jjtree.closeNodeScope(jjtn003, true);
                                 }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public void statements() throws ParseException {/*@bgen(jjtree) Statements */
  Statements jjtn000 = new Statements(JJTSTATEMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_7:
      while (true) {
        if (jj_2_22(2)) {
          ;
        } else {
          break label_7;
        }
        statement();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public void statement() throws ParseException {
    if (jj_2_23(2)) {
      letStatement();
    } else if (jj_2_24(2)) {
      ifStatement();
    } else if (jj_2_25(2)) {
      whileStatement();
    } else if (jj_2_26(2)) {
      doStatement();
    } else if (jj_2_27(2)) {
      returnStatement();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public void letStatement() throws ParseException {/*@bgen(jjtree) LetStatement */
  LetStatement jjtn000 = new LetStatement(JJTLETSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
Keyword jjtn001 = new Keyword(JJTKEYWORD);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(LET);
      } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
      varName();
      if (jj_2_28(2)) {
Symbol jjtn002 = new Symbol(JJTSYMBOL);
                              boolean jjtc002 = true;
                              jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(LBRAC);
        } finally {
if (jjtc002) {
                                jjtree.closeNodeScope(jjtn002, true);
                              }
        }
        expr();
Symbol jjtn003 = new Symbol(JJTSYMBOL);
                                                     boolean jjtc003 = true;
                                                     jjtree.openNodeScope(jjtn003);
        try {
          jj_consume_token(RBRAC);
        } finally {
if (jjtc003) {
                                                       jjtree.closeNodeScope(jjtn003, true);
                                                     }
        }
      } else {
        ;
      }
String dummy="hack to bypass jjtree error";
Symbol jjtn004 = new Symbol(JJTSYMBOL);
    boolean jjtc004 = true;
    jjtree.openNodeScope(jjtn004);
      try {
        jj_consume_token(EQ);
      } finally {
if (jjtc004) {
      jjtree.closeNodeScope(jjtn004, true);
    }
      }
      expr();
Symbol jjtn005 = new Symbol(JJTSYMBOL);
                        boolean jjtc005 = true;
                        jjtree.openNodeScope(jjtn005);
      try {
        jj_consume_token(SEMICOLON);
      } finally {
if (jjtc005) {
                          jjtree.closeNodeScope(jjtn005, true);
                        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
